FISH-11591 Add resolution for multiple persistence units